--- a/2016-02-23/source/300x250/css/main.css
+++ b/2016-02-23/source/300x250/css/main.css
@@ -1,186 +1,186 @@
 /*-- fade out animation--*/
 @-webkit-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-webkit-transform: translate(0,0);
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-webkit-transform: translate(0,0);
+    opacity: 0; 
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-moz-transform: translate(0,0);
+    opacity: 1; 
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-moz-transform: translate(0,0);
+    opacity: 0; 
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-o-transform: translate(0,0);
+    opacity: 1; 
+    -o-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-o-transform: translate(0,0);
+    opacity: 0; 
+    -o-transform: translate(0,0);
   }
 }
 @keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	transform: translate(0,0);
+    opacity: 1; 
+    transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	transform: translate(0,0);
+    opacity: 0; 
+    transform: translate(0,0);
   }
 }
 
 /*-- fade in animation--*/
 @-webkit-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-webkit-transform: translate(0,0);
+    opacity: 0; 
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-webkit-transform: translate(0,0);
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-moz-transform: translate(0,0);
+    opacity: 0; 
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-moz-transform: translate(0,0);
+    opacity: 1; 
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-o-transform: translate(0,0);
+    opacity: 0; 
+    -o-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-o-transform: translate(0,0);
+    opacity: 1; 
+    -o-transform: translate(0,0);
   }
 }
 @keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	transform: translate(0,0);
+    opacity: 0; 
+    transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	transform: translate(0,0);
+    opacity: 1; 
+    transform: translate(0,0);
   }
 }
 
 /*-- slide out animation--*/
 @-webkit-keyframes slideLeft {
   0%   {
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	-webkit-transform: translate(-300px,0);
+    -webkit-transform: translate(-300px,0);
   }
 }
 @-moz-keyframes slideLeft {
   0%   {
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	-moz-transform: translate(-300px,0);
+    -moz-transform: translate(-300px,0);
   }
 }
 @-o-keyframes slideLeft {
   0%   {
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
   100% { 
-  	-o-transform: translate(-300px,0);
+    -o-transform: translate(-300px,0);
   }
 }
 @keyframes slideLeft {
   0%   {
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
   100% { 
-  	transform: translate(-300px,0);
+    transform: translate(-300px,0);
   }
 }
 
 /*-- slide in animation--*/
 @-webkit-keyframes slideLeft2 {
   0%   {
-  	-webkit-transform: translate(300px,0);
+    -webkit-transform: translate(300px,0);
   }
   100% { 
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes slideLeft2 {
   0%   {
-  	-moz-transform: translate(300px,0);
+    -moz-transform: translate(300px,0);
   }
   100% { 
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes slideLeft2 {
   0%   {
-  	-o-transform: translate(300px,0);
+    -o-transform: translate(300px,0);
   }
   100% { 
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
 }
 @keyframes slideLeft2 {
   0%   {
-  	transform: translate(300px,0);
+    transform: translate(300px,0);
   }
   100% { 
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
 }
 
 /*-- slide in back animation--*/
 @-webkit-keyframes slideRight {
   0%   {
-  	-webkit-transform: translate(-300px,0);
+    -webkit-transform: translate(-300px,0);
   }
   100% { 
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes slideRight {
   0%   {
-  	-moz-transform: translate(-300px,0);
+    -moz-transform: translate(-300px,0);
   }
   100% { 
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes slideRight {
   0%   {
-  	-o-transform: translate(-300px,0);
+    -o-transform: translate(-300px,0);
   }
   100% { 
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
 }
 @keyframes slideRight {
   0%   {
-  	transform: translate(-300px,0);
+    transform: translate(-300px,0);
   }
   100% { 
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
 }
 
@@ -197,29 +197,18 @@
 .banner-container{
   overflow: hidden;
 }
-
-.banner-content{
+.frame1-container{
+  -webkit-animation: fadeOut 1s ease-in-out 4s forwards;
+  -moz-animation: fadeOut 1s ease-in-out 4s forwards;
+  -ms-animation: fadeOut 1s ease-in-out 4s forwards;
+  -o-animation: fadeOut 1s ease-in-out 4s forwards;
+  animation: fadeOut 1s ease-in-out 4s forwards;
 }
-.bg-container{
-  -webkit-transform: translate(300px,0);
-  -moz-transform: translate(300px,0);
-  -ms-transform: translate(300px,0);
-  -o-transform: translate(300px,0);
-  transform: translate(300px,0); 
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
-}
-.bg{
-  background: url('../img/300x250_bg.jpg') no-repeat center center;
-  -webkit-transform: translate(-300px,0);
-  -moz-transform: translate(-300px,0);
-  -ms-transform: translate(-300px,0);
-  -o-transform: translate(-300px,0);
-  transform: translate(-300px,0);
+.frame1-content{
+  background-color: #fff;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
 
   -webkit-animation: fadeIn 1s ease-in-out 1s forwards;
   -moz-animation: fadeIn 1s ease-in-out 1s forwards;
@@ -227,32 +216,19 @@
   -o-animation: fadeIn 1s ease-in-out 1s forwards;
   animation: fadeIn 1s ease-in-out 1s forwards;
 }
-.exclusive-container{
-  -webkit-transform: translate(300px,0);
-  -moz-transform: translate(300px,0);
-  -ms-transform: translate(300px,0);
-  -o-transform: translate(300px,0);
-  transform: translate(300px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
+.frame1-bg{
+  background: url('../img/300x250_frame1_image.jpg') no-repeat center bottom;
 }
-.exclusive-text{
+.frame1-text{
   position: absolute;
-  width: 84px;
-  height: 10px;
-  background: url('../img/300x250_exclusive_en.png') no-repeat center center;
-  top: 48px;
-  left: 44px;
-
-  -webkit-transform: translate(-300px,0);
-  -moz-transform: translate(-300px,0);
-  -ms-transform: translate(-300px,0);
-  -o-transform: translate(-300px,0);
-  transform: translate(-300px,0);
+  width: 283px;
+  height: 90px;
+  background: url('../img/300x250_frame1_text.png') no-repeat center center;
+  top: 4px;
+  left: 9px;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
 
   -webkit-animation: fadeIn 1s ease-in-out 2s forwards;
   -moz-animation: fadeIn 1s ease-in-out 2s forwards;
@@ -261,66 +237,18 @@
   animation: fadeIn 1s ease-in-out 2s forwards;
 }
 
-.nicolette-container{
-  -webkit-transform: translate(300px,0);
-  -moz-transform: translate(300px,0);
-  -ms-transform: translate(300px,0);
-  -o-transform: translate(300px,0);
-  transform: translate(300px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
+.frame2-container{
+  -webkit-animation: fadeOut 1s ease-in-out 7s forwards;
+  -moz-animation: fadeOut 1s ease-in-out 7s forwards;
+  -ms-animation: fadeOut 1s ease-in-out 7s forwards;
+  -o-animation: fadeOut 1s ease-in-out 7s forwards;
+  animation: fadeOut 1s ease-in-out 7s forwards;
 }
-.nicolette-text{
-  position: absolute;
-  width: 193px;
-  height: 99px;
-  background: url('../img/300x250_nicolette_mason_en.png') no-repeat center center;
-  top: 33px;
-  left: 0px;
-
-  -webkit-transform: translate(-300px,0);
-  -moz-transform: translate(-300px,0);
-  -ms-transform: translate(-300px,0);
-  -o-transform: translate(-300px,0);
-  transform: translate(-300px,0);
-
-  -webkit-animation: fadeIn 1s ease-in-out 3s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 3s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 3s forwards;
-  -o-animation: fadeIn 1s ease-in-out 3s forwards;
-  animation: fadeIn 1s ease-in-out 3s forwards;
-}
-
-.cocktail-container{
-  -webkit-transform: translate(300px,0);
-  -moz-transform: translate(300px,0);
-  -ms-transform: translate(300px,0);
-  -o-transform: translate(300px,0);
-  transform: translate(300px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
-}
-.cocktail-text{
-  position: absolute;
-  width: 159px;
-  height: 7px;
-  background: url('../img/300x250_coctail_en.png') no-repeat center center;
-  top: 106px;
-  left: 8px;
-
-  -webkit-transform: translate(-300px,0);
-  -moz-transform: translate(-300px,0);
-  -ms-transform: translate(-300px,0);
-  -o-transform: translate(-300px,0);
-  transform: translate(-300px,0);
+.frame2-content{
+  background-color: #fff;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
 
   -webkit-animation: fadeIn 1s ease-in-out 4s forwards;
   -moz-animation: fadeIn 1s ease-in-out 4s forwards;
@@ -328,33 +256,19 @@
   -o-animation: fadeIn 1s ease-in-out 4s forwards;
   animation: fadeIn 1s ease-in-out 4s forwards;
 }
-
-.now-available-container{
-  -webkit-transform: translate(300px,0);
-  -moz-transform: translate(300px,0);
-  -ms-transform: translate(300px,0);
-  -o-transform: translate(300px,0);
-  transform: translate(300px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
+.frame2-bg{
+  background: url('../img/300x250_frame2_image.jpg') no-repeat center bottom;
 }
-.now-available-text{
+.frame2-text{
   position: absolute;
-  width: 90px;
-  height: 8px;
-  background: url('../img/300x250_now_available_en.png') no-repeat center center;
-  top: 126px;
-  left: 43px;
-
-  -webkit-transform: translate(-300px,0);
-  -moz-transform: translate(-300px,0);
-  -ms-transform: translate(-300px,0);
-  -o-transform: translate(-300px,0);
-  transform: translate(-300px,0);
+  width: 285px;
+  height: 70px;
+  background: url('../img/300x250_frame2_text.png') no-repeat center center;
+  top: 4px;
+  left: 10px;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
 
   -webkit-animation: fadeIn 1s ease-in-out 5s forwards;
   -moz-animation: fadeIn 1s ease-in-out 5s forwards;
@@ -363,7 +277,7 @@
   animation: fadeIn 1s ease-in-out 5s forwards;
 }
 
-.hover-container{
+.frame3-container{
   -webkit-transform: translate(300px,0);
   -moz-transform: translate(300px,0);
   -ms-transform: translate(300px,0);
@@ -376,13 +290,8 @@
   -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
   animation: slideLeft2 10ms ease-in-out 0s forwards;
 }
-.hover-text{
-  position: absolute;
-  width: 124px;
-  height: 30px;
-  background: url('../img/300x250_cta_en.png') no-repeat center center;
-  top: 139px;
-  left: 26px;
+.frame3-content{
+  background-color: #fff;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -390,9 +299,77 @@
   -o-transform: translate(-300px,0);
   transform: translate(-300px,0);
 
-  -webkit-animation: fadeIn 1s ease-in-out 6s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 6s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 6s forwards;
-  -o-animation: fadeIn 1s ease-in-out 6s forwards;
-  animation: fadeIn 1s ease-in-out 6s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 7s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 7s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 7s forwards;
+  -o-animation: fadeIn 1s ease-in-out 7s forwards;
+  animation: fadeIn 1s ease-in-out 7s forwards;
+}
+.frame3-bg{
+  background: url('../img/300x250_frame3_image.jpg') no-repeat center bottom;
+}
+.frame3-text-container{
+  -webkit-transform: translate(300px,0);
+  -moz-transform: translate(300px,0);
+  -ms-transform: translate(300px,0);
+  -o-transform: translate(300px,0);
+  transform: translate(300px,0);
+
+  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  animation: slideLeft2 10ms ease-in-out 0s forwards;
+}
+.frame3-text{
+  position: absolute;
+  width: 225px;
+  height: 67px;
+  background: url('../img/300x250_frame3_text.png') no-repeat center center;
+  top: 7px;
+  left: 37px;
+
+  -webkit-transform: translate(-300px,0);
+  -moz-transform: translate(-300px,0);
+  -ms-transform: translate(-300px,0);
+  -o-transform: translate(-300px,0);
+  transform: translate(-300px,0);
+
+  -webkit-animation: fadeIn 1s ease-in-out 8s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 8s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 8s forwards;
+  -o-animation: fadeIn 1s ease-in-out 8s forwards;
+  animation: fadeIn 1s ease-in-out 8s forwards;
+}
+.cta-container{
+  -webkit-transform: translate(300px,0);
+  -moz-transform: translate(300px,0);
+  -ms-transform: translate(300px,0);
+  -o-transform: translate(300px,0);
+  transform: translate(300px,0);
+
+  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  animation: slideLeft2 10ms ease-in-out 0s forwards;
+}
+.cta-text{
+  position: absolute;
+  width: 139px;
+  height: 43px;
+  background: url('../img/300x250_cta.png') no-repeat center center;
+  bottom: 4px;
+  right: 6px;
+  -webkit-transform: translate(-300px,0);
+  -moz-transform: translate(-300px,0);
+  -ms-transform: translate(-300px,0);
+  -o-transform: translate(-300px,0);
+  transform: translate(-300px,0);
+  
+  -webkit-animation: slideRight 0.5s ease-in-out 9s forwards;
+  -moz-animation: slideRight 0.5s ease-in-out 9s forwards;
+  -ms-animation: slideRight 0.5s ease-in-out 9s forwards;
+  -o-animation: slideRight 0.5s ease-in-out 9s forwards;
+  animation: slideRight 0.5s ease-in-out 9s forwards;
 }
