--- a/2016-02-23/source/728x90/css/main.css
+++ b/2016-02-23/source/728x90/css/main.css
@@ -1,186 +1,186 @@
 /*-- fade out animation--*/
 @-webkit-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-webkit-transform: translate(0,0);
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-webkit-transform: translate(0,0);
+    opacity: 0; 
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-moz-transform: translate(0,0);
+    opacity: 1; 
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-moz-transform: translate(0,0);
+    opacity: 0; 
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-o-transform: translate(0,0);
+    opacity: 1; 
+    -o-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-o-transform: translate(0,0);
+    opacity: 0; 
+    -o-transform: translate(0,0);
   }
 }
 @keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	transform: translate(0,0);
+    opacity: 1; 
+    transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	transform: translate(0,0);
+    opacity: 0; 
+    transform: translate(0,0);
   }
 }
 
 /*-- fade in animation--*/
 @-webkit-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-webkit-transform: translate(0,0);
+    opacity: 0; 
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-webkit-transform: translate(0,0);
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-moz-transform: translate(0,0);
+    opacity: 0; 
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-moz-transform: translate(0,0);
+    opacity: 1; 
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-o-transform: translate(0,0);
+    opacity: 0; 
+    -o-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-o-transform: translate(0,0);
+    opacity: 1; 
+    -o-transform: translate(0,0);
   }
 }
 @keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	transform: translate(0,0);
+    opacity: 0; 
+    transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	transform: translate(0,0);
+    opacity: 1; 
+    transform: translate(0,0);
   }
 }
 
 /*-- slide out animation--*/
 @-webkit-keyframes slideLeft {
   0%   {
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	-webkit-transform: translate(-728px,0);
+    -webkit-transform: translate(-728px,0);
   }
 }
 @-moz-keyframes slideLeft {
   0%   {
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	-moz-transform: translate(-728px,0);
+    -moz-transform: translate(-728px,0);
   }
 }
 @-o-keyframes slideLeft {
   0%   {
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
   100% { 
-  	-o-transform: translate(-728px,0);
+    -o-transform: translate(-728px,0);
   }
 }
 @keyframes slideLeft {
   0%   {
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
   100% { 
-  	transform: translate(-728px,0);
+    transform: translate(-728px,0);
   }
 }
 
 /*-- slide in animation--*/
 @-webkit-keyframes slideLeft2 {
   0%   {
-  	-webkit-transform: translate(728px,0);
+    -webkit-transform: translate(728px,0);
   }
   100% { 
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes slideLeft2 {
   0%   {
-  	-moz-transform: translate(728px,0);
+    -moz-transform: translate(728px,0);
   }
   100% { 
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes slideLeft2 {
   0%   {
-  	-o-transform: translate(728px,0);
+    -o-transform: translate(728px,0);
   }
   100% { 
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
 }
 @keyframes slideLeft2 {
   0%   {
-  	transform: translate(728px,0);
+    transform: translate(728px,0);
   }
   100% { 
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
 }
 
 /*-- slide in back animation--*/
 @-webkit-keyframes slideRight {
   0%   {
-  	-webkit-transform: translate(-728px,0);
+    -webkit-transform: translate(-728px,0);
   }
   100% { 
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes slideRight {
   0%   {
-  	-moz-transform: translate(-728px,0);
+    -moz-transform: translate(-728px,0);
   }
   100% { 
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes slideRight {
   0%   {
-  	-o-transform: translate(-728px,0);
+    -o-transform: translate(-728px,0);
   }
   100% { 
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
 }
 @keyframes slideRight {
   0%   {
-  	transform: translate(-728px,0);
+    transform: translate(-728px,0);
   }
   100% { 
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
 }
 
@@ -197,29 +197,26 @@
 .banner-container{
   overflow: hidden;
 }
-
-.banner-content{
+.color-bar{
+  position: absolute;
+  width: 728px;
+  height: 4px;
+  background: url('../img/728x90_color_bar.png') no-repeat center center;
+  bottom: 0px;
+  left: 0px;
 }
-.bg-container{
-  -webkit-transform: translate(728px,0);
-  -moz-transform: translate(728px,0);
-  -ms-transform: translate(728px,0);
-  -o-transform: translate(728px,0);
-  transform: translate(728px,0); 
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
+.frame1-container{
+  -webkit-animation: fadeOut 1s ease-in-out 4s forwards;
+  -moz-animation: fadeOut 1s ease-in-out 4s forwards;
+  -ms-animation: fadeOut 1s ease-in-out 4s forwards;
+  -o-animation: fadeOut 1s ease-in-out 4s forwards;
+  animation: fadeOut 1s ease-in-out 4s forwards;
 }
-.bg{
-  background: url('../img/728x90_bg_en.jpg') no-repeat center center;
-  -webkit-transform: translate(-728px,0);
-  -moz-transform: translate(-728px,0);
-  -ms-transform: translate(-728px,0);
-  -o-transform: translate(-728px,0);
-  transform: translate(-728px,0);
+.frame1-content{
+  background-color: #fff;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
 
   -webkit-animation: fadeIn 1s ease-in-out 1s forwards;
   -moz-animation: fadeIn 1s ease-in-out 1s forwards;
@@ -227,32 +224,19 @@
   -o-animation: fadeIn 1s ease-in-out 1s forwards;
   animation: fadeIn 1s ease-in-out 1s forwards;
 }
-.exclusive-container{
-  -webkit-transform: translate(728px,0);
-  -moz-transform: translate(728px,0);
-  -ms-transform: translate(728px,0);
-  -o-transform: translate(728px,0);
-  transform: translate(728px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
+.frame1-bg{
+  background: url('../img/728x90_frame1_image.jpg') no-repeat right center;
 }
-.exclusive-text{
+.frame1-text{
   position: absolute;
-  width: 77px;
-  height: 9px;
-  background: url('../img/728x90_exclusive_en.png') no-repeat center center;
+  width: 368px;
+  height: 76px;
+  background: url('../img/728x90_frame1_text.png') no-repeat center center;
   top: 7px;
-  left: 255px;
-
-  -webkit-transform: translate(-728px,0);
-  -moz-transform: translate(-728px,0);
-  -ms-transform: translate(-728px,0);
-  -o-transform: translate(-728px,0);
-  transform: translate(-728px,0);
+  left: 11px;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
 
   -webkit-animation: fadeIn 1s ease-in-out 2s forwards;
   -moz-animation: fadeIn 1s ease-in-out 2s forwards;
@@ -261,66 +245,18 @@
   animation: fadeIn 1s ease-in-out 2s forwards;
 }
 
-.nicolette-container{
-  -webkit-transform: translate(728px,0);
-  -moz-transform: translate(728px,0);
-  -ms-transform: translate(728px,0);
-  -o-transform: translate(728px,0);
-  transform: translate(728px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
+.frame2-container{
+  -webkit-animation: fadeOut 1s ease-in-out 7s forwards;
+  -moz-animation: fadeOut 1s ease-in-out 7s forwards;
+  -ms-animation: fadeOut 1s ease-in-out 7s forwards;
+  -o-animation: fadeOut 1s ease-in-out 7s forwards;
+  animation: fadeOut 1s ease-in-out 7s forwards;
 }
-.nicolette-text{
-  position: absolute;
-  width: 178px;
-  height: 45px;
-  background: url('../img/728x90_nicolette_mason_en.png') no-repeat center center;
-  top: 22px;
-  left: 201px;
-
-  -webkit-transform: translate(-728px,0);
-  -moz-transform: translate(-728px,0);
-  -ms-transform: translate(-728px,0);
-  -o-transform: translate(-728px,0);
-  transform: translate(-728px,0);
-
-  -webkit-animation: fadeIn 1s ease-in-out 3s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 3s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 3s forwards;
-  -o-animation: fadeIn 1s ease-in-out 3s forwards;
-  animation: fadeIn 1s ease-in-out 3s forwards;
-}
-
-.cocktail-container{
-  -webkit-transform: translate(728px,0);
-  -moz-transform: translate(728px,0);
-  -ms-transform: translate(728px,0);
-  -o-transform: translate(728px,0);
-  transform: translate(728px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
-}
-.cocktail-text{
-  position: absolute;
-  width: 221px;
-  height: 9px;
-  background: url('../img/728x90_coctail_en.png') no-repeat center center;
-  top: 71px;
-  left: 183px;
-
-  -webkit-transform: translate(-728px,0);
-  -moz-transform: translate(-728px,0);
-  -ms-transform: translate(-728px,0);
-  -o-transform: translate(-728px,0);
-  transform: translate(-728px,0);
+.frame2-content{
+  background-color: #fff;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
 
   -webkit-animation: fadeIn 1s ease-in-out 4s forwards;
   -moz-animation: fadeIn 1s ease-in-out 4s forwards;
@@ -328,33 +264,19 @@
   -o-animation: fadeIn 1s ease-in-out 4s forwards;
   animation: fadeIn 1s ease-in-out 4s forwards;
 }
-
-.now-available-container{
-  -webkit-transform: translate(728px,0);
-  -moz-transform: translate(728px,0);
-  -ms-transform: translate(728px,0);
-  -o-transform: translate(728px,0);
-  transform: translate(728px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
+.frame2-bg{
+  background: url('../img/728x90_frame2_image.jpg') no-repeat right center;
 }
-.now-available-text{
+.frame2-text{
   position: absolute;
-  width: 138px;
-  height: 11px;
-  background: url('../img/728x90_now_available_en.png') no-repeat center center;
-  top: 19px;
-  right: 24px;
-
-  -webkit-transform: translate(-728px,0);
-  -moz-transform: translate(-728px,0);
-  -ms-transform: translate(-728px,0);
-  -o-transform: translate(-728px,0);
-  transform: translate(-728px,0);
+  width: 379px;
+  height: 71px;
+  background: url('../img/728x90_frame2_text.png') no-repeat center center;
+  top: 7px;
+  left: 11px;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
 
   -webkit-animation: fadeIn 1s ease-in-out 5s forwards;
   -moz-animation: fadeIn 1s ease-in-out 5s forwards;
@@ -363,7 +285,7 @@
   animation: fadeIn 1s ease-in-out 5s forwards;
 }
 
-.hover-container{
+.frame3-container{
   -webkit-transform: translate(728px,0);
   -moz-transform: translate(728px,0);
   -ms-transform: translate(728px,0);
@@ -376,13 +298,8 @@
   -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
   animation: slideLeft2 10ms ease-in-out 0s forwards;
 }
-.hover-text{
-  position: absolute;
-  width: 157px;
-  height: 36px;
-  background: url('../img/728x90_cta_en.png') no-repeat center center;
-  top: 41px;
-  right: 13px;
+.frame3-content{
+  background-color: #fff;
 
   -webkit-transform: translate(-728px,0);
   -moz-transform: translate(-728px,0);
@@ -390,9 +307,89 @@
   -o-transform: translate(-728px,0);
   transform: translate(-728px,0);
 
-  -webkit-animation: fadeIn 1s ease-in-out 6s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 6s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 6s forwards;
-  -o-animation: fadeIn 1s ease-in-out 6s forwards;
-  animation: fadeIn 1s ease-in-out 6s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 7s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 7s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 7s forwards;
+  -o-animation: fadeIn 1s ease-in-out 7s forwards;
+  animation: fadeIn 1s ease-in-out 7s forwards;
+}
+.frame3-bg{
+  background: url('../img/728x90_frame3_image.jpg') no-repeat right center;
+}
+.frame3-text-container{
+  -webkit-transform: translate(728px,0);
+  -moz-transform: translate(728px,0);
+  -ms-transform: translate(728px,0);
+  -o-transform: translate(728px,0);
+  transform: translate(728px,0);
+
+  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  animation: slideLeft2 10ms ease-in-out 0s forwards;
+}
+.frame3-text-content{
+  -webkit-transform: translate(-728px,0);
+  -moz-transform: translate(-728px,0);
+  -ms-transform: translate(-728px,0);
+  -o-transform: translate(-728px,0);
+  transform: translate(-728px,0);
+
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 0;
+
+  -webkit-animation: fadeIn 1s ease-in-out 8s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 8s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 8s forwards;
+  -o-animation: fadeIn 1s ease-in-out 8s forwards;
+  animation: fadeIn 1s ease-in-out 8s forwards;
+}
+.frame3-text{
+  position: absolute;
+  width: 379px;
+  height: 75px;
+  background: url('../img/728x90_frame3_text.png') no-repeat center center;
+  top: 5px;
+  left: 7px;
+
+  -webkit-animation: fadeOut 0.5s ease-in-out 10s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 10s forwards;
+  -ms-animation: fadeOut 0.5s ease-in-out 10s forwards;
+  -o-animation: fadeOut 0.5s ease-in-out 10s forwards;
+  animation: fadeOut 0.5s ease-in-out 10s forwards;
+}
+.cta-container{
+  -webkit-transform: translate(728px,0);
+  -moz-transform: translate(728px,0);
+  -ms-transform: translate(728px,0);
+  -o-transform: translate(728px,0);
+  transform: translate(728px,0);
+
+  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  animation: slideLeft2 10ms ease-in-out 0s forwards;
+}
+.cta-text{
+  position: absolute;
+  width: 215px;
+  height: 64px;
+  background: url('../img/728x90_cta.png') no-repeat center center;
+  top: 13px;
+  left: 98px;
+
+  -webkit-transform: translate(-728px,0);
+  -moz-transform: translate(-728px,0);
+  -ms-transform: translate(-728px,0);
+  -o-transform: translate(-728px,0);
+  transform: translate(-728px,0);
+
+  -webkit-animation: slideRight 0.5s ease-in-out 10s forwards;
+  -moz-animation: slideRight 0.5s ease-in-out 10s forwards;
+  -ms-animation: slideRight 0.5s ease-in-out 10s forwards;
+  -o-animation: slideRight 0.5s ease-in-out 10s forwards;
+  animation: slideRight 0.5s ease-in-out 10s forwards;
 }
